# LLAIR

./: .clang-format  CMakeLists.txt  LICENSE.TXT  README.md
cmake/: LLAIRConfig.cmake.in
cmake/modules/: metal.cmake
examples/: CMakeLists.txt  MakeLibrary.mm  MetalC.cpp  example.metal  test.cpp
examples/command-line/: CMakeLists.txt  MetalC.cpp  test.cpp
examples/interactive/: CMakeLists.txt  config.h.in  llair-triangle.metal  llair-triangle.mm  main.mm
extsrc/llvm-demangle/: CMakeLists.txt
extsrc/llvm-demangle/include/: CMakeLists.txt
extsrc/llvm-demangle/include/llair/Demangle/: Demangle.h  DemangleConfig.h  ItaniumDemangle.h  MicrosoftDemangle.h  MicrosoftDemangleNodes.h  StringView.h  Utility.h
extsrc/llvm-demangle/include/llvm/Demangle/: Demangle.h  DemangleConfig.h  ItaniumDemangle.h  MicrosoftDemangle.h  MicrosoftDemangleNodes.h  StringView.h  Utility.h
extsrc/llvm-demangle/lib/Demangle/: CMakeLists.txt  ItaniumDemangle.cpp  MicrosoftDemangle.cpp  MicrosoftDemangleNodes.cpp
include/: CMakeLists.txt
include/llair/Bitcode/: Bitcode.h
include/llair/IR/: Class.h  Dispatcher.h  EntryPoint.h  Interface.h  LLAIRContext.h  Module.h  Named.h  SymbolTable.h
include/llair/Linker/: Linker.h
include/llair/Tools/: Compile.h  MakeLibrary.h  Program.h  Tools.h
lib/Bitcode/: Bitcode.cpp  CMakeLists.txt
lib/IR/: CMakeLists.txt  Class.cpp  Dispatcher.cpp  EntryPoint.cpp  Interface.cpp  LLAIRContext.cpp  LLAIRContextImpl.h  Metadata.h  Module.cpp  Named.cpp  SymbolTable.cpp
lib/Linker/: CMakeLists.txt  Linker.cpp
lib/Tools/: CMakeLists.txt  Compile.cpp  MakeLibrary.cpp  Program.cpp  Tools.cpp  ToolsImpl.h  popen2.c  popen2.h
test/: test.cpp
tools/llair-dump/: CMakeLists.txt  llair-dump.cpp
tools/llair-link/: CMakeLists.txt  Class.cpp  Class.h  Interface.cpp  Interface.h  InterfaceScope.cpp  InterfaceScope.h  llair-link.cpp
tools/llair-metallib/: CMakeLists.txt  llair-metallib.cpp
